css/style.css
/* ... */
body {
  background-color: var(--av-bg);
}

.container {
  padding: 0 15px;
  background-color: white;
}

[class*="col-"] {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-content: center;
  width: 100%;
}

.section#foreword [class*="col-"] {
  align-content: flex-start;
  padding-left: 1.5em;
  padding-right: 1.5em;
}

.row {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  width: 100%;
}

.row:after {
  content: "";
  clear: both;
  display: table;
}

img {
  width: 100%;
}


/* --Work Page-- */

#work .row {
  padding: 22px 0 22px;
  border-bottom: 1px solid lightgray;
}

#work .row:last-of-type {
  border-style: none;
}


/* --Navigation-- */

header {
  display: flex;
  position: fixed;
  top: 0;
  justify-content: center;
  overflow: hidden;
  width: 100%;
  margin: 0;
  background-color: var(--av-teal);
}

/* Mobile Hamburger */

#mobileSpacer {
  margin-top: 64px;
}

header a.icon {
  display: block;
  position: fixed;
  right: 16px;
  top: 14px;
  color: lightgray;
}

header a.icon:active {
  color: white;
}

header a.icon > i.navClosed {
  color: lightgray;
}

header a.icon > i.navOpened {
  color: black;
  opacity: 80%;
}

#logo {
  position: relative;
  font-size: 0.67em;
  display: flex;
  justify-content: center;
  height: 100%;
  opacity: 100%;
  padding: 10px 10px;
  color: white;
  line-height: 1.2em;
}

a#logo > svg {
  height: 44px;
}

.logo-a-color {
  fill: var(--av-link);
}

.logo-eye-color {
  fill: var(--av-teal);
}

.logo-v-color {
  fill: var(--av-link);
}

@keyframes move-a {
  from {
    transform: translate(0, -100px);
  }
  to {
    transform: translate(0, 0);
  }
}

@keyframes move-v {
  from {
    transform: translate(0, 100px);
  }
  to {
    transform: translate(0, 0);
  }
}

/* @keyframes cycleText {
  0% {
    content: "UX Designer";
  }
  33% {
    content: "Design Thinker";
  }
  67% {
    content: "Creative Problem Solver";
  }
  100% {
    content: "UX Designer";
  }
} */

/* #heroText:after {
  animation: 9s cycleText infinite ease-out;
  content: "";
} */

.a-part {
  animation: 0.6s move-a 1 normal ease-out;
}

.v-part {
  animation: 0.6s move-v 1 normal ease-out;
}

nav {
  display: none;
  position: fixed;
  justify-content: center;
  right: 0;
  top: 0;
  width: 50%;
  height: 100%;
  background-color: var(--av-darkTeal);
  border-radius: 10px 0 0 10px;
  padding: 22px 10px;
}

main ul, ol {
  margin-left: 2em;
  margin-right: auto;
}

main ol {
  font-size: 1.2em;
  font-weight: 600;
  color: var(--av-gold);
}

main li {
  padding-bottom: .4em;
}

main li span {
  font-size: .8em;
  font-weight: normal;
  color: black;
}

main ol > li:last-of-type {
  padding-bottom: 1em;
}

nav > ul {
  list-style-type: none;
  margin-top: 44px;
  padding: 0;
}

nav > ul > li {
  display: flex;
  text-decoration-line: none;
  justify-content: center;
  margin: 22px;
}

nav > ul > li > a {
  text-transform: uppercase;
  font-weight: 500;
  color: white;
  line-height: 1em;
  border-style: solid;
  border-color: transparent;
  border-width: 3px;
}

nav > ul > li.active > a {
  border-bottom-color: var(--av-link);
  border-width: 3px;
}

nav > ul > li > a#navCv {
  padding: 0 12px 6px;
  border-bottom: none;
}

nav > ul > li > a:visited {
  color: white;
}

/* Font */
body {
  font-family: "acumin-pro", sans-serif;
  font-size: 16px;
  font-weight: 300;
  line-height: 1.6;
  color: black;
}

h1,
h2,
h3,
h4 {
  width: 100%;
  line-height: 1.2;
  padding: 0.5em 0;
}

h1,
h3 {
  font-family: "acumin-pro-wide", "acumin-pro", sans-serif;
}

h1 {
  font-weight: 800;
  font-size: 2.75em;
  color: var(--av-gold);
  padding: 44px 0;
}

h2 {
  font-family: "acumin-pro", sans-serif;
  font-weight: 400;
  font-size: 2em;
  color: gray;
}

h3 {
  font-weight: 700;
  font-size: 1.25em;
  color: var(--av-teal);
}

h4 {
  font-size: 1.1em;
  font-weight: 600;
}

p {
  display: inline-block;
  margin-right: auto;
  padding-top: 0.25em;
  padding-bottom: .5em;
}

p:last-of-type{
  padding-bottom: 1em;
}

#project p strong {
  font-weight: 600;
}

#hero {
  text-align: center;
}

#hero h1 {
  margin: 0;
  padding: 0.5em 0 0.25em;
  -webkit-text-stroke: 1px white;
  text-shadow: 1px 2px 1px dimgray;
}

h1#workHero {
  padding: 1em 0;
  font-size: 2em;
}

h1#aboutHero {
  padding: 1em 0;
}

#hero span {
  display: block;
  font-weight: 400;
  font-size: 0.4em;
  line-height: 1.6em;
  color: dimgray;
  text-align: center;
  -webkit-text-stroke: 0px;
  text-shadow: none
}

#workHero span {
  font-size: .5em;
}

#work {
  text-align: center;
}

#work h2 {
  display: none;
}

#work h3 {
  font-size: 1.5em;
  padding: 0.5em 0 0;
  color: var(--av-green);
}

#work p {
  padding: 0.5em 0 1em;
}

/* Projects */
main#project {
  padding-bottom: 0;
}

div.row.reverse {
  flex-direction: column-reverse;
}

div.row#hero {
  padding-bottom: 1em;
}

#heroImg {
  padding: 0 10px;
}

.section {
  padding-bottom: 5em;
  border-bottom: 1px solid lightgray;
}

.section::after {
  content: "";
  clear: both;
  display: table;
}

#work .section:last-of-type {
  padding-bottom: 1em;
}

#contact {
  background-color: var(--av-bg);
}

#contact div{
  background-color: var(--av-bg);
}

#contact .section {
  padding: 1em 0 2.5em;
}

/* .capFirst {
  font-size: 1.25em;
} */

#contents {
  background-color: var(--av-teal);
}

#contents ul {
  list-style-type: none;
  margin: 0;
  padding-bottom: 0;
  text-align: center;
  line-height: 2.4em;
  text-decoration: underline var(--av-link);
}

#tools p {
  font-size: 0.8em;
  width: 100%;
  text-align: center;
  margin: 0 auto;
  padding: 0.25em 0 0;
}

#project h2 {
  font-weight: 800;
  color: var(--av-gold);
  padding: 2em 0em 2em;
  text-align: center;
  -webkit-text-stroke: 1px white;
  text-shadow: 1px 2px 1px dimgray;
}

#project h3 > i {
  color: dimgray;
}

h2 > span {
  line-height: 2.5em;
  font-weight: 300;
  font-size: 0.67em;
  color: dimgray;
  -webkit-text-stroke: 0px;
  text-shadow: none;
}
/* ... */

